Bug 339771: Split WTP-specific schema type provider into separate plugin (plus test plugin)